# polyp

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/models/: bunny.mtl  wuson.mtl
cmake/: FindVulkanSDK.cmake
example/: CMakeLists.txt  main.cpp
example/shaders/: example.vs
examples/: CMakeLists.txt  main_gl.cpp  main_vk.cpp
examples/shaders/: example.vs
samples/: CMakeLists.txt
samples/black_screen/: black_screen.cpp
samples/gl/: CMakeLists.txt  main_gl.cpp
samples/load_obj_model/: load_obj_model.cpp
samples/simple_box/: simple_box.cpp
samples/simple_many_boxes/: simple_many_boxes.cpp
samples/simple_triangle/: simple_triangle.cpp
samples/simple_triangle/shaders/: simple_triangle.vert
samples/vk/: CMakeLists.txt
samples/vk/black_screen/: black_screen.cpp  main.cpp
samples/vk/residency/: residency.cpp
samples/vk/simple_triangle/: simple_triangle.cpp
samples/vk/simple_triangle/shaders/: simple_triangle.vert
samples/vk/triangle/: main.cpp
src/: CMakeLists.txt  common.h  example_base.cpp  example_raii.cpp  example_raii.h  global.h  polyp_config.h  vk_common.cpp  vk_common.h  vk_context.cpp  vk_context.h  vk_stringise.cpp  vk_stringise.h  vk_utils.cpp  vk_utils.h  vma.cpp  vma.h
src/common/: application.cpp  application.h  event.h
src/example/: example_2D.cpp  example_2D.h  example_a.cpp  example_a.h  example_base.cpp  example_base.h  example_basic_pipeline.cpp  example_basic_pipeline.h
src/generic/: application.cpp  application.h  camera.cpp  camera.h  event.h  fps_counter.h  image_loader.cpp  image_loader.h  logs.h  model_loader.cpp  model_loader.h  os_utils.h  time_utils.h
src/glEngine/: CMakeLists.txt  concepts.h  shader.cpp  shader.h
src/tools/: CMakeLists.txt  camera.cpp  camera.h  constants.h  error_codes.cpp  error_codes.h  platforms.h  polyp_logs.h  polyp_window.cpp  polyp_window.h  utils_errors.cpp  utils_errors.h  window_surface.cpp  window_surface.h
src/tools/interfaces/: renderer.h
src/utils/: CMakeLists.txt  camera.cpp  camera.h  constants.h  utils_errors.cpp  utils_errors.h
src/vkEngine/: CMakeLists.txt  common.h  common_targets.h  concepts.h  create_infos.h  destroyer.h  device.cpp  device.h  dispatch_table.h  dispatch_table.inl  example.cpp  example.h  example_raii.cpp  example_raii.h  instance.cpp  instance.h  surface.cpp  surface.h  swapchain.cpp  swapchain.h  utils.cpp  utils.h  vk_destroyer.h
src/vkEngine/vk/: common.h  destroyable_handle.cpp  destroyable_handle.h  device.cpp  device.h  dispatch_table.h  instance.cpp  instance.h  surface.cpp  surface.h  swapchain.cpp  swapchain.h
src/vulkan/: vk_common.cpp  vk_common.h  vk_context.cpp  vk_context.h  vk_utils.cpp  vk_utils.h
